# xian-technology-web

./: .gitignore  AGENTS.md  README.md  pyproject.toml  reflex-guide.md
.github/workflows/: validate.yml
assets/flows/: xian_flow.drawio
xian_tech/: contact_email.py  data.py  fizzy_api.py  search.py  xian_tech.py
xian_tech/pages/: api.py  consensus.py  contracting.py  faq.py  home.py  samples.py  tooling.py  tutorials.py
xian_tech/state/: app.py  tooling.py
