[project]
name = "xian-tech"
version = "0.1.0"
description = ""
authors = [
    {name = "Endogen", email = "endogen@xian.org"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "reflex (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
