[project]
name = "xian-tech"
version = "0.1.0"
description = ""
authors = [{ name = "Endogen", email = "endogen@xian.org" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "python-dotenv>=1.2.2,<2.0.0",
    "reflex>=0.9.0,<0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
]

[tool.uv]
package = false
